Complete header UI for desktop

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
 @font-face {font-family: 'Futura-Med';src: url('src/webfonts/329157_2_0.eot');src: url('src/webfonts/329157_2_0.eot?#iefix') format('embedded-opentype'),url('src/webfonts/329157_2_0.woff2') format('woff2'),url('src/webfonts/329157_2_0.woff') format('woff'),url('src/webfonts/329157_2_0.ttf') format('truetype');}
 @font-face {font-family: 'Futura-Boo';src: url('src/webfonts/329157_0_0.eot');src: url('src/webfonts/329157_0_0.eot?#iefix') format('embedded-opentype'),url('src/webfonts/329157_0_0.woff2') format('woff2'),url('src/webfonts/329157_0_0.woff') format('woff'),url('src/webfonts/329157_0_0.ttf') format('truetype');}  
 
+@media (max-width: 1280px) {
+  .hdWrap {
+    width: 100%;
+    max-width: 95%;
+  }
+}
     </style>
   </head>
   <body>
