--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <title>apartmentary</title>
     <style type="text/css">
       @font-face {font-family: 'YoonGothicPro';src: url('src/webfonts/YoonGothicPro745.woff')};
